<resources>
    <string name="app_name">MyCareerPath</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Enter search here</string>
    <string name="action_settings">Settings</string>
    <string name="skill_title_hint">Enter a name for your skill.</string>
    <string name="skill_title_label">Skill</string>
    <string name="skill_detail_label">Details</string>
    <string name="skill_exp_label">Experience?</string>
    <string name="date_picker_title">Date Skill Added:</string>
    <string name="new_skill">Add Skill</string>
    <string name="rem_skill">Remove Skill</string>
    <string name="no_skills">No Skills:\n\tPress the + to add a Skill.</string>
    <plurals name="subtitle_format">
        <item quantity="one">%1$s skill</item>
        <item quantity="other">%1$s skills</item>
    </plurals>
    <string name="skill_peer_button_text">Choose Peer</string>
    <string name="skill_resume_button_text">Send Skill Resume</string>
    <string name="skill_resume">%1$s!\nAs of %2$s: %4$s, and %3$s</string>
    <string name="skill_endorsed">this skill has been endorsed!</string>
    <string name="skill_not_endorsed">this skill has not been endorsed.</string>
    <string name="skill_no_peer">No peer associated</string>
    <string name="skill_peer">Your peer is %s</string>
    <string name="skill_resume_subject">MyCareerPath Generated Skill Resume</string>
    <string name="send_report">Send skill resume via</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="user_name_label">User Name</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="user_description">User Profile Page</string>
    <string name="user_menu_label">Me</string>
    <string name="user_menu_description">User Profile</string>
    <string name="attributes_menu_label">Attributes</string>
    <string name="attributes_menu_description">Define your attributes</string>
    <string name="attributes_menu_skills_label">Skills</string>
    <string name="attributes_menu_skills_description">Define your skills</string>
    <string name="attributes_menu_abilities_label">Abilities</string>
    <string name="attributes_menu_abilities_description">Define your abilities</string>
    <string name="attributes_menu_knowledge_label">Knowledge</string>
    <string name="attributes_menu_knowledge_description">Define your knowledge</string>
    <string name="attributes_menu_edctrnexp_label">Education, Training, and Experience</string>
    <string name="attributes_menu_edctrnexp_description">Define your hands on details</string>
    <string name="attributes_menu_interests_label">Interests</string>
    <string name="attributes_menu_interests_description">Define your interests</string>
    <string name="explore_menu_label">Explore</string>
    <string name="explore_menu_description">Find Careers associated tou your skills.</string>
    <string name="connect_menu_label">Connect</string>
    <string name="connect_menu_description">Find your peers.</string>
    <string name="learn_menu_label">Learn</string>
    <string name="learn_menu_description">Find videos and courses to further your career.</string>
    <string name="attributes_skill">Skills</string>
    <string name="attributes_abilities">Abilities</string>
    <string name="attributes_knowledge">Knowledge</string>
    <string name="attributes_edctrnexp">Education, Training, and Experience</string>
    <string name="attributes_interests">Interests</string>
    <string name="title_activity_attr_detail">AttributeDetailActivity</string>
    <string name="facebook_app_id">487017184827673</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_like_gallery">LikeGalleryActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
