<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_user"
            android:title="@string/user_menu_label"
            android:checked="true"
            />
        <item
            android:id="@+id/nav_menu_details"
            android:title="@string/details_menu_label"
            />
        <item
            android:id="@+id/nav_menu_explore"
            android:title="@string/explore_menu_label"
            />
        <item
            android:id="@+id/nav_menu_connect"
            android:title="@string/connect_menu_label"
            />
        <item
            android:id="@+id/nav_menu_learn"
            android:title="@string/learn_menu_label"
            />
    </group>
</menu>